correct text color in dark mode for react-select

--- a/src/views/Home/home.module.css
+++ b/src/views/Home/home.module.css
@@ -12,6 +12,10 @@
   padding-bottom: 2rem;
 }
 
+.loginNames {
+  color: black;
+}
+
 .wrapper {
   align-items: center;
   display: flex;
